# tubefeeder-extractor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
observer/: Cargo.toml
platform-test/: Cargo.toml
platform-test/src/: lib.rs
platform-youtube/: Cargo.toml
platform-youtube/examples/: video_list.rs
platform-youtube/src/: lib.rs  structure.rs  subscription.rs  video.rs
playlist/: Cargo.toml
playlist/src/: playlist.rs  playlist_manager.rs
tf_core/: Cargo.toml  README.md
tf_core/src/: error.rs  lib.rs
tf_core/src/definitions/: expanded_video.rs  generator.rs  subscription.rs  video.rs
tf_core/src/pipeline/: expander.rs  merger.rs  pipe.rs  store_access.rs  subscription_list.rs  video_store.rs
tf_filter/: Cargo.toml  README.md
tf_filter/src/: lib.rs
tf_join/: Cargo.toml  README.md
tf_join/examples/: join.rs
tf_join/src/: filter.rs  joiner.rs  lib.rs  subscription.rs  subscription_list.rs  video.rs
tf_observer/: Cargo.toml  README.md
tf_observer/src/: lib.rs
tf_platform_lbry/: Cargo.toml  README.md
tf_platform_lbry/examples/: lbry_channel.rs
tf_platform_lbry/src/: lib.rs  subscription.rs  video.rs
tf_platform_peertube/: Cargo.toml  README.md
tf_platform_peertube/examples/: channel.rs  pt_channel.rs
tf_platform_peertube/src/: lib.rs  structure.rs  subscription.rs  video.rs
tf_platform_test/: Cargo.toml  README.md
tf_platform_test/src/: lib.rs
tf_platform_youtube/: Cargo.toml  README.md
tf_platform_youtube/examples/: video_list.rs
tf_platform_youtube/resources/test/: youtubefeed.xml
tf_platform_youtube/src/: lib.rs  pipeline.rs  subscription.rs  video.rs
tf_playlist/: Cargo.toml  README.md
tf_playlist/src/: lib.rs  playlist.rs  playlist_manager.rs
tf_utils/: Cargo.toml  README.md
tf_utils/src/: lib.rs  rss.rs
tf_utils/src/rss/: mod.rs  rss_extractor.rs  structure.rs
tubefeeder-extractor-core/: Cargo.toml
tubefeeder-extractor-core/src/: error.rs  lib.rs
tubefeeder-extractor-core/src/definitions/: expanded_video.rs  generator.rs  mod.rs  subscription.rs  video.rs
tubefeeder-extractor-core/src/observer/: mod.rs
tubefeeder-extractor-core/src/pipeline/: expander.rs  merger.rs  mod.rs  pipe.rs  store_access.rs  subscription_list.rs  video_store.rs
tubefeeder-extractor-core/src/traits/: generator.rs  mod.rs  subscription.rs  video.rs
tubefeeder-extractor-filter/: Cargo.toml
tubefeeder-extractor-filter/src/: lib.rs
tubefeeder-extractor-join/: Cargo.toml
tubefeeder-extractor-join/examples/: join.rs
tubefeeder-extractor-join/src/: filter.rs  joiner.rs  lib.rs  subscription.rs  subscription_list.rs  video.rs
tubefeeder-extractor-test/: Cargo.toml
tubefeeder-extractor-test/src/: lib.rs
tubefeeder-extractor-youtube/: Cargo.toml
tubefeeder-extractor-youtube/examples/: video_list.rs
tubefeeder-extractor-youtube/resources/test/: youtube-videos.html  youtubefeed_invalid.xml
tubefeeder-extractor-youtube/src/: generator.rs  lib.rs  structure.rs  subscription.rs  video.rs
