[package]
name = "platform-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { package = "tubefeeder-extractor-core", path = "../tubefeeder-extractor-core" }
chrono = { version = "^0.4", features = [ "serde" ] }
async-trait = "^0.1"
reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }
tokio = { version = "^1.9", features = [ "macros" ] }
