[package]
name = "platform-youtube"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { package = "tubefeeder-extractor-core", path = "../tubefeeder-extractor-core" }

rusty_pipe = { git = "https://github.com/Tubefeeder/rusty_pipe.git", rev = "4361ea032f6468748b9874aa468371a930d29ea0" }

async-trait = "^0.1"
chrono = { version = "^0.4", features = [ "serde" ] }
regex = "^1.5"
tokio = { version = "^1.9", features = [ "macros" ] }
quick-xml = { version = "^0.22", features = [ "serialize" ] }
reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }
serde = { version = "^1.0", features = [ "derive" ] }
log = "^0.4"
gdk-pixbuf = "^0.14"
glib = "^0.14"

[dev-dependencies]
mockall = "^0.10"
mockito = "^0.30"
env_logger =  "^0.9"
