[package]
name = "tf_core"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-or-later"
description = "The core part of Tubefeeder"
homepage = "https://www.tubefeeder.de"
repository = "https://github.com/Tubefeeder/tubefeeder-extractor"
keywords = [ "tubefeeder" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_observer = { version = "0.1.2", path = "../tf_observer" }

async-trait = "^0.1"
chrono = { version = "^0.4", features = [ "serde" ] }
tokio = { version = "^1.29", features = [ "macros" ] }
reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }
futures = "^0.3"
log = "^0.4"

image = "^0.24"

[dev-dependencies]
mockall = "0.11.4"
mockito = "0.31.1"
