[package]
name = "tf_join"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Join multiple platforms in Tubefeeder-Extractor"
homepage = "https://www.tubefeeder.de"
repository = "https://github.com/Tubefeeder/tubefeeder-extractor"
keywords = [ "tubefeeder" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_observer = { version = "0.1.2", path = "../tf_observer" }
tf_core = { version = "0.1.2", path = "../tf_core" }
tf_filter = { version = "0.1.2", path = "../tf_filter"}

tf_yt = { package = "tf_platform_youtube", version = "0.1.1", path = "../tf_platform_youtube", optional = true}
tf_pt = { package = "tf_platform_peertube", version = "0.1.1", path = "../tf_platform_peertube", optional = true}
tf_lbry = { package = "tf_platform_lbry", version = "0.1.1", path = "../tf_platform_lbry", optional = true}
# -- Add dependency here.

async-trait = "^0.1"
chrono = { version = "^0.4", features = [ "serde" ] }
regex = "^1.5"
reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }
futures = "^0.3"

image = "^0.24"

[dev-dependencies]
env_logger =  "^0.9"
log = "^0.4"
tokio = { version = "^1.17", features = [ "macros" ] }

tf_test = { package = "tf_platform_test", version = "0.1.2", path = "../tf_platform_test"}

[features]
# -- Add new feature into the default list.
default = ["youtube", "peertube", "lbry"]
youtube = ["tf_yt"]
peertube = ["tf_pt"]
lbry = ["tf_lbry"]
# -- Add new feature here.
