[package]
name = "tf_observer"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "The observer pattern used in Tubefeeder-Extractor"
homepage = "https://www.tubefeeder.de"
repository = "https://github.com/Tubefeeder/tubefeeder-extractor"
keywords = [ "tubefeeder" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
mockall = "0.11.0"
mockito = "0.31.0"
