[package]
name = "tf_platform_youtube"
version = "0.1.0"
edition = "2018"
license = "GPL-1.0-or-later"
description = "The youtube platform used in Tubefeeder"
homepage = "https://www.tubefeeder.de"
repository = "https://github.com/Tubefeeder/tubefeeder-extractor"
keywords = [ "tubefeeder" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { package = "tf_core", path = "../tf_core" }

piped = { package = "piped", git = "https://github.com/Tubefeeder/piped-rust-sdk.git", branch = "cleanup" }

async-trait = "^0.1"
chrono = { version = "^0.4", features = [ "serde" ] }
parse_duration = "2.1.1"
futures = "^0.3"
regex = "^1.5"
tokio = { version = "^1.9", features = [ "macros" ] }
quick-xml = { version = "^0.22", features = [ "serialize" ] }
reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }
serde = { version = "^1.0", features = [ "derive" ] }
log = "^0.4"
gdk-pixbuf = "^0.14"
glib = "^0.14"

image = "^0.23"
webp = "^0.2"

[dev-dependencies]
mockall = "^0.10"
mockito = "^0.30"
env_logger =  "^0.9"
