[package]
name = "tf_platform_youtube"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"
description = "The platform for youtube Tubefeeder-Extractor"
homepage = "https://www.tubefeeder.de"
repository = "https://github.com/Tubefeeder/tubefeeder-extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { package = "tf_core", path = "../tf_core" }
tf_utils = { package = "tf_utils", path = "../tf_utils" }

piped = { package = "piped", git = "https://github.com/Tubefeeder/piped-rust-sdk.git", branch = "feature-search-channel" }

async-trait = "^0.1"
chrono = { version = "^0.4", features = [ "serde" ] }
regex = "^1.5"
quick-xml = { version = "^0.22", features = [ "serialize" ] }
reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }
log = "^0.4"

image = "^0.23"
webp = "^0.2"

[dev-dependencies]
mockall = "^0.10"
mockito = "^0.30"
env_logger =  "^0.9"
tokio = { version = "^1.9", features = [ "macros" ] }
