[package]
name = "tf_platform_youtube"
version = "0.1.7"
edition = "2021"
license = "GPL-3.0-or-later"
description = "The platform for youtube Tubefeeder-Extractor"
homepage = "https://www.tubefeeder.de"
repository = "https://github.com/Tubefeeder/tubefeeder-extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { version = "0.1.4", path = "../tf_core" }
tf_utils = { version = "0.1.3", path = "../tf_utils" }

piped = "0.0.3"

async-trait = "^0.1"
chrono = { version = "^0.4", features = [ "serde" ] }
regex = "^1.9"
quick-xml = { version = "^0.22", features = [ "serialize" ] }
reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }
log = "^0.4"

image = "^0.24"
webp = "^0.2"

[dev-dependencies]
mockall = "^0.11"
mockito = "^0.31"
env_logger =  "^0.9"
tokio = { version = "^1.29", features = [ "macros" ] }
