[package]
name = "tf_playlist"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0-or-later"
description = "The playlist feature used in Tubefeeder"
homepage = "https://www.tubefeeder.de"
repository = "https://github.com/Tubefeeder/tubefeeder-extractor"
keywords = [ "tubefeeder" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_observer = { version =  "0.1.3", path = "../tf_observer" }

log = "^0.4"
