[package]
name = "tf_utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { version = "0.1.0", path = "../tf_core" }

reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }

async-trait = "^0.1"

serde = { version = "^1.0", features = [ "derive" ] }
quick-xml = { version = "^0.22", features = [ "serde" ] }
chrono = { version = "^0.4", features = [ "serde" ] }

log = "^0.4"
