[package]
name = "tf_utils"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Utility functions in Tubefeeder-Extractor"
homepage = "https://www.tubefeeder.de"
repository = "https://github.com/Tubefeeder/tubefeeder-extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { version = "0.1.2", path = "../tf_core" }

reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }

async-trait = "^0.1"

serde = { version = "^1.0", features = [ "derive" ] }
quick-xml = { version = "^0.22", features = [ "serialize" ] }

chrono = { version = "^0.4", features = [ "serde" ] }
parse_duration = "^2.1"

log = "^0.4"
