[package]
name = "tubefeeder-extractor-filter"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { package = "tubefeeder-extractor-core", path = "../tubefeeder-extractor-core" }

log = "^0.4"
