[package]
name = "tubefeeder-extractor-join"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { package = "tubefeeder-extractor-core", path = "../tubefeeder-extractor-core" }
tf_filter = { package = "tubefeeder-extractor-filter", path = "../tubefeeder-extractor-filter"}
tf_yt = { package = "tubefeeder-extractor-youtube", path = "../tubefeeder-extractor-youtube", optional = true}
tf_test = { package = "tubefeeder-extractor-test", path = "../tubefeeder-extractor-test" , optional = true}

async-trait = "^0.1"
chrono = { version = "^0.4", features = [ "serde" ] }
regex = "^1.5"
reqwest = { version = "^0.11", features = [ "rustls-tls" ], default-features = false }
tokio = { version = "^1.9", features = [ "macros" ] }
futures = "^0.3"
gdk-pixbuf = "^0.14"

log = "^0.4"

[dev-dependencies]
env_logger =  "^0.9"

[features]
default = ["youtube"]
youtube = ["tf_yt"]
testPlatform = ["tf_test"]
