[package]
name = "tubefeeder-extractor-youtube"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { package = "tubefeeder-extractor-core", path = "../tubefeeder-extractor-core" }

async-stream = "0.3.2"
async-trait = "0.1.50"
chrono = "0.4"
reqwest = "0.11.4"
tokio = { version = "1.9.0", features = [ "macros" ] }
futures = "0.3.16"

log = "0.4"

rusty_pipe = { git = "https://github.com/Tubefeeder/rusty_pipe.git" }

[dev-dependencies]
mockall = "0.10.2"
mockito = "0.30.0"
env_logger = "0.9"

