[package]
name = "tubefeeder-extractor-youtube"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf_core = { package = "tubefeeder-extractor-core", path = "../tubefeeder-extractor-core" }

async-trait = "0.1.50"
chrono = { version = "0.4.19", features = [ "serde" ] }
tokio = { version = "1.9.0", features = [ "macros" ] }
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
reqwest = { version = "0.11.4", features = [ "rustls-tls" ], default-features = false }
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
mockall = "0.10.2"
mockito = "0.30.0"

